# sol_trading_bot

./: .env.example  .gitignore  Cargo.toml  README.md  config.yaml.example  read_me_for_codex.md
migrations/: 001_init.sql
src/: config.rs  error.rs  main.rs
src/cli/: mod.rs
src/discord/: client.rs  mod.rs  models.rs
src/domain/: candidate.rs  investor_flow.rs  mod.rs  ohlcv.rs  order.rs  position.rs  signal.rs  stock.rs
src/kis/: auth.rs  client.rs  domestic_stock.rs  mock_client.rs  mod.rs  models.rs
src/order/: mod.rs
src/scheduler/: mod.rs
src/storage/: mod.rs  repository.rs  sqlite.rs
src/strategy/: candidate_builder.rs  collect.rs  filters.rs  mod.rs  monitor.rs  risk.rs  scoring.rs
systemd/: kis-supply-bot-build-candidates.service  kis-supply-bot-build-candidates.timer  kis-supply-bot-collect-1610.service  kis-supply-bot-collect-1610.timer  kis-supply-bot-monitor.service
